Fix vertical alignment of titles on Channels page (Bug 647241)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@87158 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/channel.css
+++ b/style/covehead/channel.css
@@ -51,7 +51,6 @@
 #download_firefox h3 { background-position: 0 -260px; }
 
 
-#channel .channel#download_aurora h3 span,
 #channel .channel#download_firefox h3 span {
     padding-top: 15px;
 }
